--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
-  "devDependencies": {
-    "vitepress": "^1.6.3"
-  },
-  "scripts": {
-    "docs:dev": "vitepress dev docs",
-    "docs:build": "vitepress build docs",
-    "docs:preview": "vitepress preview docs"
-  }
+	"devDependencies": {
+		"gh-pages": "^6.3.0",
+		"vitepress": "^1.6.3"
+	},
+	"scripts": {
+		"docs:dev": "vitepress dev docs",
+		"docs:build": "vitepress build docs",
+		"docs:preview": "vitepress preview docs",
+		"docs:deploy": "vitepress build docs && gh-pages -d docs/.vitepress/dist"
+	},
+	"volta": {
+		"node": "20.10.0"
+	}
 }
