--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,28 +3,33 @@ name: Deploy VitePress site to GitHub Pages
 on:
   push:
     branches:
-      - main # 如果你的主分支叫 master 就改成 master
+      - main  # 主分支名，确认你用的分支是 main 还是 master
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+    - name: Checkout repository
+      uses: actions/checkout@v3
+      with:
+        fetch-depth: 0  # 拉全历史，方便强推覆盖
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
+    - name: Setup Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: 18
 
-      - name: Install dependencies
-        run: npm install
+    - name: Install dependencies
+      run: npm install
 
-      - name: Build VitePress
-        run: npm run docs:build
+    - name: Build VitePress
+      run: npm run docs:build
 
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: docs/.vitepress/dist
+    - name: Deploy to GitHub Pages
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: docs/.vitepress/dist
+        keep_files: false
+        verbose: true
