--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,3 +32,5 @@ jobs:
         personal_token: ${{ secrets.PERSONAL_TOKEN }}
         publish_dir: docs/.vitepress/dist
         keep_files: false
+    - name: Check PERSONAL_TOKEN existence
+      run: echo "Token length: ${{ secrets.PERSONAL_TOKEN && secrets.PERSONAL_TOKEN.length || 0 }}"
