feat： 更新成了自动生成

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,8 +22,10 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - run: node scripts/genSidebar.js
+
       - name: Build VitePress
-        run: npm run docs:build
+        run: npm run build
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
